# trace-plus

./: .cloudeignore  .gitignore  README.md  package-lock.json  requirements.txt
deployment/: startup.sh
deployment/Cloudjiffy/: main.py  wsgi.py
deployment/Docker/: Dockerfile
deployment/final/: deploy.sh  extract  extract.sh  full-deploy-pilot.sh  full-deploy-stage.sh  full-deploy.sh
dev/trace-api-server/: notes.md
dev/trace-client/: .eslintrc.cjs  CLAUDE.md  MIGRATION-SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js  tmpclaude-6316-cwd  tsconfig.json  vite.config.ts
dev/trace-client - Copy/: README.md  package-lock.json  package.json  tsconfig.json
dev/trace-client-cra/: package-lock.json  package.json
dev/trace-client-lab/: package-lock.json  package.json  vite.config.ts
dev/trace-client1/: .eslintrc.cjs  package-lock.json  package.json  vite.config.ts
dev/trace-server/: notes.md  plan.md
dev/trace_mobile_plus/: .gitignore  ICON_SETUP.md  README.md  claude.md  pubspec.yaml  tmpclaude-bac6-cwd
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
env1/: pyvenv.cfg
env1/Scripts/: activate  activate.bat  vba_extract.py
lab/: notes.md
lab/mcp/mcp-server-project/: pyproject.toml  server.py
notes/: .notepad.md.kate-swp  Bugs.md  Deployment proceeds linux.md  Deployment.md  Logic.md  OneDrive - Personal - Shortcut.lnk  Test results.xlsx  due-list.md  knowledgebase-client.md  knowledgebase-server.md  knowledgebase.md  notepad.md  notes.md  python premier.md  react-context-api-guide-2026.md  todo.md  tracking.md
(+2274 files in other folders)
