[project]
name = "mcp-server-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.13.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
hello-mcp-server = "server:main"

[tool.setuptools]
py-modules = ["server"]
